# pysinger

./: .gitignore  .readthedocs.yaml  README.md
SINGER/SINGER/: Sampler.cpp  (+4 more)
pysinger/: README.md  demo.ipynb  pyproject.toml
pysinger/docs/: api.md  build_singer_yourself.md  conf.py  data_structures.md  hmm.md  implementation_guide.md  index.md  io.md  mcmc.md  overview.md  theory.md
pysinger/docs/_build/_sources/: build_singer_yourself.md.txt  index.md.txt
pysinger/pysinger/: __init__.py  diagnostics.py  parallel.py  sampler.py
pysinger/pysinger/data/: recombination.py
pysinger/pysinger/hmm/: __init__.py
pysinger/pysinger/io/: __init__.py  tskit_writer.py
pysinger/pysinger/rates/: __init__.py
pysinger/pysinger/reconstruction/: __init__.py
pysinger/tests/: conftest.py  test_bsp.py  test_coalescent.py  test_data_structures.py  test_fitch.py  test_parallel.py  test_sampler.py  test_vcf_reader.py
pysinger/tests/fixtures/: small.vcf
pysingerarg/: demo.ipynb  pyproject.toml
pysingerarg/pysingerarg/: __init__.py  sampler.py
pysingerarg/pysingerarg/data/: __init__.py  arg.py  branch.py  interval.py  node.py  tree.py
pysingerarg/pysingerarg/hmm/: bsp.py  coalescent.py  emission.py  tsp.py
pysingerarg/pysingerarg/io/: tskit_writer.py  vcf_reader.py
pysingerarg/pysingerarg/mcmc/: __init__.py  threader.py
pysingerarg/pysingerarg/rates/: rate_map.py
pysingerarg/pysingerarg/reconstruction/: fitch.py
pysingerarg/tests/: conftest.py  test_bsp.py  test_coalescent.py  test_data_structures.py  test_fitch.py  test_sampler.py  test_vcf_reader.py
